--- a/Maven-21May-A-2/test-output/old/Suite/methods.html
+++ b/Maven-21May-A-2/test-output/old/Suite/methods.html
@@ -1,44 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c16b87">  <td>22/09/27 15:18:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgTestClass.addMobileInCart()[pri:1, instance:tempTestPack.TestNgTestClass@4fb0f2b9]">addMobileInCart</td> 
+<tr bgcolor="c16b87">  <td>22/09/27 16:02:26</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;TestNgTestClass2.closedBrower()[pri:0, instance:tempTestPack.TestNgTestClass2@4466af20]">&lt;&lt;closedBrower</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="c16b87">  <td>22/09/27 16:02:26</td>   <td>-27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgTestClass2.test2()[pri:0, instance:tempTestPack.TestNgTestClass2@4466af20]">test2</td> 
   <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="95b565">  <td>22/09/27 15:21:57</td>   <td>178197</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgTestClass2.test2()[pri:0, instance:tempTestPack.TestNgTestClass2@12468a38]">test2</td> 
+<tr bgcolor="c16b87">  <td>22/09/27 16:02:26</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNgTestClass2.logOutThePage(org.testng.ITestResult)[pri:0, instance:tempTestPack.TestNgTestClass2@4466af20]">&lt;&lt;logOutThePage</td> 
+<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="c16b87">  <td>22/09/27 16:00:14</td>   <td>-132403</td> <td>&nbsp;</td><td title="&gt;&gt;TestNgTestClass2.launchTheBrowser(java.lang.String)[pri:0, instance:tempTestPack.TestNgTestClass2@4466af20]">&gt;&gt;launchTheBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="c16b87">  <td>22/09/27 16:00:17</td>   <td>-129168</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNgTestClass2.createObjects()[pri:0, instance:tempTestPack.TestNgTestClass2@4466af20]">&gt;&gt;createObjects</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="c16b87">  <td>22/09/27 16:02:26</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNgTestClass2.logOutThePage(org.testng.ITestResult)[pri:0, instance:tempTestPack.TestNgTestClass2@4466af20]">&lt;&lt;logOutThePage</td> 
+<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="c16b87">  <td>22/09/27 16:02:26</td>   <td>-30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNgTestClass2.signIn()[pri:0, instance:tempTestPack.TestNgTestClass2@4466af20]">&gt;&gt;signIn</td> 
+<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="c16b87">  <td>22/09/27 16:00:48</td>   <td>-98626</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgTestClass2.test1()[pri:0, instance:tempTestPack.TestNgTestClass2@4466af20]">test1</td> 
   <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="95b565">  <td>22/09/27 15:21:57</td>   <td>178215</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNgTestClass2.cleanPOMObjects()[pri:0, instance:tempTestPack.TestNgTestClass2@12468a38]">&lt;&lt;cleanPOMObjects</td> 
+<tr bgcolor="c16b87">  <td>22/09/27 16:02:26</td>   <td>-30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNgTestClass2.signIn()[pri:0, instance:tempTestPack.TestNgTestClass2@4466af20]">&gt;&gt;signIn</td> 
+<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="c16b87">  <td>22/09/27 16:02:26</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNgTestClass2.cleanPOMObjects()[pri:0, instance:tempTestPack.TestNgTestClass2@4466af20]">&lt;&lt;cleanPOMObjects</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="95b565">  <td>22/09/27 15:21:57</td>   <td>178209</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNgTestClass2.logOutThePage(org.testng.ITestResult)[pri:0, instance:tempTestPack.TestNgTestClass2@12468a38]">&lt;&lt;logOutThePage</td> 
-<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="c16b87">  <td>22/09/27 15:17:31</td>   <td>-87502</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNgTestClass.createObjects()[pri:0, instance:tempTestPack.TestNgTestClass@4fb0f2b9]">&gt;&gt;createObjects</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="95b565">  <td>22/09/27 15:21:57</td>   <td>178195</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNgTestClass2.signIn()[pri:0, instance:tempTestPack.TestNgTestClass2@12468a38]">&gt;&gt;signIn</td> 
-<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="c16b87">  <td>22/09/27 15:21:57</td>   <td>178217</td> <td>&nbsp;</td><td title="&lt;&lt;TestNgTestClass.closedBrowser()[pri:0, instance:tempTestPack.TestNgTestClass@4fb0f2b9]">&lt;&lt;closedBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="95b565">  <td>22/09/27 15:17:20</td>   <td>-98662</td> <td>&nbsp;</td><td title="&gt;&gt;TestNgTestClass2.launchTheBrowser(java.lang.String)[pri:0, instance:tempTestPack.TestNgTestClass2@12468a38]">&gt;&gt;launchTheBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="c16b87">  <td>22/09/27 15:18:49</td>   <td>-9519</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNgTestClass.signIn()[pri:0, instance:tempTestPack.TestNgTestClass@4fb0f2b9]">&gt;&gt;signIn</td> 
-<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="95b565">  <td>22/09/27 15:21:03</td>   <td>124154</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgTestClass2.test1()[pri:0, instance:tempTestPack.TestNgTestClass2@12468a38]">test1</td> 
-  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="95b565">  <td>22/09/27 15:21:57</td>   <td>178209</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNgTestClass2.logOutThePage(org.testng.ITestResult)[pri:0, instance:tempTestPack.TestNgTestClass2@12468a38]">&lt;&lt;logOutThePage</td> 
-<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="95b565">  <td>22/09/27 15:20:53</td>   <td>114043</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNgTestClass2.createObjects()[pri:0, instance:tempTestPack.TestNgTestClass2@12468a38]">&gt;&gt;createObjects</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="c16b87">  <td>22/09/27 15:20:53</td>   <td>114042</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNgTestClass.cleanPOMobjects()[pri:0, instance:tempTestPack.TestNgTestClass@4fb0f2b9]">&lt;&lt;cleanPOMobjects</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="c16b87">  <td>22/09/27 15:19:43</td>   <td>44146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNgTestClass.logOutThePage(org.testng.ITestResult)[pri:0, instance:tempTestPack.TestNgTestClass@4fb0f2b9]">&lt;&lt;logOutThePage</td> 
-<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="c16b87">  <td>22/09/27 15:17:43</td>   <td>-76243</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgTestClass.addTheQuantityOfProductInCart()[pri:0, instance:tempTestPack.TestNgTestClass@4fb0f2b9]">addTheQuantityOfProductInCart</td> 
-  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="95b565">  <td>22/09/27 15:21:57</td>   <td>178195</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNgTestClass2.signIn()[pri:0, instance:tempTestPack.TestNgTestClass2@12468a38]">&gt;&gt;signIn</td> 
-<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="c16b87">  <td>22/09/27 15:19:43</td>   <td>44146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNgTestClass.logOutThePage(org.testng.ITestResult)[pri:0, instance:tempTestPack.TestNgTestClass@4fb0f2b9]">&lt;&lt;logOutThePage</td> 
-<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="95b565">  <td>22/09/27 15:21:57</td>   <td>178369</td> <td>&nbsp;</td><td title="&lt;&lt;TestNgTestClass2.closedBrower()[pri:0, instance:tempTestPack.TestNgTestClass2@12468a38]">&lt;&lt;closedBrower</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="c16b87">  <td>22/09/27 15:17:16</td>   <td>-102861</td> <td>&nbsp;</td><td title="&gt;&gt;TestNgTestClass.launchTheBrowser(java.lang.String)[pri:0, instance:tempTestPack.TestNgTestClass@4fb0f2b9]">&gt;&gt;launchTheBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="c16b87">  <td>22/09/27 15:18:49</td>   <td>-9519</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNgTestClass.signIn()[pri:0, instance:tempTestPack.TestNgTestClass@4fb0f2b9]">&gt;&gt;signIn</td> 
-<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
 </table>
