--- a/Maven-21May-A-2/test-output/old/Suite/methods-alphabetical.html
+++ b/Maven-21May-A-2/test-output/old/Suite/methods-alphabetical.html
@@ -1,24 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c16b87">  <td>22/09/27 16:02:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNgTestClass2.cleanPOMObjects()[pri:0, instance:tempTestPack.TestNgTestClass2@4466af20]">&lt;&lt;cleanPOMObjects</td> 
+<tr bgcolor="e767f3">  <td>22/09/29 14:41:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNgTestClass2.cleanPOMObjects()[pri:0, instance:tempTestPack.TestNgTestClass2@6d763516]">&lt;&lt;cleanPOMObjects</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="c16b87">  <td>22/09/27 16:02:26</td>   <td>5</td> <td>&nbsp;</td><td title="&lt;&lt;TestNgTestClass2.closedBrower()[pri:0, instance:tempTestPack.TestNgTestClass2@4466af20]">&lt;&lt;closedBrower</td> 
+<tr bgcolor="e767f3">  <td>22/09/29 14:41:05</td>   <td>6</td> <td>&nbsp;</td><td title="&lt;&lt;TestNgTestClass2.closedBrower()[pri:0, instance:tempTestPack.TestNgTestClass2@6d763516]">&lt;&lt;closedBrower</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="c16b87">  <td>22/09/27 16:00:17</td>   <td>-129163</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNgTestClass2.createObjects()[pri:0, instance:tempTestPack.TestNgTestClass2@4466af20]">&gt;&gt;createObjects</td> 
+<tr bgcolor="e767f3">  <td>22/09/29 14:39:12</td>   <td>-113284</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNgTestClass2.createObjects()[pri:0, instance:tempTestPack.TestNgTestClass2@6d763516]">&gt;&gt;createObjects</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="c16b87">  <td>22/09/27 16:00:14</td>   <td>-132398</td> <td>&nbsp;</td><td title="&gt;&gt;TestNgTestClass2.launchTheBrowser(java.lang.String)[pri:0, instance:tempTestPack.TestNgTestClass2@4466af20]">&gt;&gt;launchTheBrowser</td> 
+<tr bgcolor="e767f3">  <td>22/09/29 14:38:59</td>   <td>-126868</td> <td>&nbsp;</td><td title="&gt;&gt;TestNgTestClass2.launchTheBrowser(java.lang.String)[pri:0, instance:tempTestPack.TestNgTestClass2@6d763516]">&gt;&gt;launchTheBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="c16b87">  <td>22/09/27 16:02:26</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNgTestClass2.logOutThePage(org.testng.ITestResult)[pri:0, instance:tempTestPack.TestNgTestClass2@4466af20]">&lt;&lt;logOutThePage</td> 
+<tr bgcolor="e767f3">  <td>22/09/29 14:41:05</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNgTestClass2.logOutThePage(org.testng.ITestResult)[pri:0, instance:tempTestPack.TestNgTestClass2@6d763516]">&lt;&lt;logOutThePage</td> 
 <td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="c16b87">  <td>22/09/27 16:02:26</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNgTestClass2.logOutThePage(org.testng.ITestResult)[pri:0, instance:tempTestPack.TestNgTestClass2@4466af20]">&lt;&lt;logOutThePage</td> 
+<tr bgcolor="e767f3">  <td>22/09/29 14:41:05</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNgTestClass2.logOutThePage(org.testng.ITestResult)[pri:0, instance:tempTestPack.TestNgTestClass2@6d763516]">&lt;&lt;logOutThePage</td> 
 <td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="c16b87">  <td>22/09/27 16:02:26</td>   <td>-25</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNgTestClass2.signIn()[pri:0, instance:tempTestPack.TestNgTestClass2@4466af20]">&gt;&gt;signIn</td> 
+<tr bgcolor="e767f3">  <td>22/09/29 14:41:05</td>   <td>-27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNgTestClass2.signIn()[pri:0, instance:tempTestPack.TestNgTestClass2@6d763516]">&gt;&gt;signIn</td> 
 <td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="c16b87">  <td>22/09/27 16:02:26</td>   <td>-25</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNgTestClass2.signIn()[pri:0, instance:tempTestPack.TestNgTestClass2@4466af20]">&gt;&gt;signIn</td> 
+<tr bgcolor="e767f3">  <td>22/09/29 14:41:05</td>   <td>-27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNgTestClass2.signIn()[pri:0, instance:tempTestPack.TestNgTestClass2@6d763516]">&gt;&gt;signIn</td> 
 <td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="c16b87">  <td>22/09/27 16:00:48</td>   <td>-98621</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgTestClass2.test1()[pri:0, instance:tempTestPack.TestNgTestClass2@4466af20]">test1</td> 
+<tr bgcolor="e767f3">  <td>22/09/29 14:39:30</td>   <td>-95096</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgTestClass2.test1()[pri:0, instance:tempTestPack.TestNgTestClass2@6d763516]">test1</td> 
   <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="c16b87">  <td>22/09/27 16:02:26</td>   <td>-22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgTestClass2.test2()[pri:0, instance:tempTestPack.TestNgTestClass2@4466af20]">test2</td> 
+<tr bgcolor="e767f3">  <td>22/09/29 14:41:05</td>   <td>-24</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgTestClass2.test2()[pri:0, instance:tempTestPack.TestNgTestClass2@6d763516]">test2</td> 
   <td>main@640070680</td>   <td></td> </tr>
 </table>
